# test-cdk-project

./: .gitignore  Taskfile.yml  app.py  cdk.context.json  main.py  pyproject.toml
cdk_project/: basic_lambda_stack.py  cdk_project_stack.py  fargate_stack.py  fast_api_stack.py
lambdas/: hello.py
tests/integration/: test_fastapi_lambda.py
tests/unit/: test_cdk_project_stack.py  test_fargate_stack.py  test_full_lambda_stack.py
